objects/FinanceBalanceSnapshot.object
<CustomObject>
    <fields>
        <fullName>blng__CreditGLAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit GL Account</label>
        <referenceTo>blng__GLAccount__c</referenceTo>
        <relationshipLabel>Finance Balance Snapshots (Credit GL Account)</relationshipLabel>
        <relationshipName>CreditGLAccountFinanceBalanceSnapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__DebitGLAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Debit GL Account</label>
        <referenceTo>blng__GLAccount__c</referenceTo>
        <relationshipLabel>Finance Balance Snapshots (Debit GL Account)</relationshipLabel>
        <relationshipName>DebitGLAccountFinanceBalanceSnapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__FinanceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Book</label>
        <referenceTo>blng__FinanceBook__c</referenceTo>
        <relationshipLabel>Finance Balance Snapshots</relationshipLabel>
        <relationshipName>FinanceBookFinanceBalanceSnapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__FinancePeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Period</label>
        <referenceTo>blng__FinancePeriod__c</referenceTo>
        <relationshipLabel>Finance Balance Snapshots</relationshipLabel>
        <relationshipName>FinancePeriodFinanceBalanceSnapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__GLRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Rule</label>
        <referenceTo>blng__GLRule__c</referenceTo>
        <relationshipLabel>Finance Balance Snapshots</relationshipLabel>
        <relationshipName>GLRuleFinanceBalanceSnapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__GLTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Treatment</label>
        <referenceTo>blng__GLTreatment__c</referenceTo>
        <relationshipLabel>Finance Balance Snapshots</relationshipLabel>
        <relationshipName>GLTreatmentFinanceBalanceSnapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>Name</columns>
        <columns>Balance</columns>
        <columns>ReferenceEntity</columns>
        <columns>TransactionDate</columns>
        <columns>EffectiveDate</columns>
        <filterScope>Mine</filterScope>
        <label>My Finance Balance Snapshots</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>